# gen-podcast

./: README.md  pyproject.toml  pyrightconfig.json
.claude/commands/: gen-podcast.md
.github/workflows/: ci.yml
src/gen_podcast/: __init__.py  cli.py  config.py  profiles.py  runner.py  status.py
src/gen_podcast/defaults/episodes/: casual_duo.json
src/gen_podcast/defaults/speakers/: duo.json
tests/: test_cli.py  test_config.py  test_profiles.py  test_runner.py  test_status.py
