[project]
name = "gen-podcast"
version = "0.1.0"
description = "Standalone CLI for podcast generation, designed for LLM agent consumption"
requires-python = ">=3.11"
dependencies = [
    "podcast-creator>=0.12.0,<1",
    "click>=8.0",
    "langchain-google-genai>=4.2.1",
]

[project.scripts]
gen-podcast = "gen_podcast.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_podcast"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
